# vox-hash

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  security_report.yml  support_question.yml
.github/workflows/: rust.yml
docs/: architecture.md  checklist.md  configuration.md  performance.md  project_overview.md  test_checklist.md
docs/adr/: 001-layered-architecture.md  002-matching-strategies.md
src/: config.rs  errors.rs  main.rs
src/app/: bulk_dec_use_case.rs  dec_use_case.rs  enc_use_case.rs  mod.rs  utils_use_case.rs
src/cli/: args.rs  validation.rs
src/domain/: candidate_generation.rs  decryption.rs  hashing.rs  matching.rs  mod.rs  models.rs
src/infra/: concurrency.rs  file_io.rs  mod.rs  shutdown.rs
tests/: cli_benchmark.rs  cli_bulk_dec.rs  cli_bulk_enc.rs  cli_dec.rs  cli_enc.rs  cli_generate_table.rs  cli_tests.rs  cli_validation.rs
tests/data/: bulk_enc_output.txt  hashes.txt  table.json  words.txt
