[package]
name = "vox-hash"
version = "1.3.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
md5 = "0.7.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
